spacing fix

--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -178,7 +178,7 @@
         font-size: 24px;
     }
     .img-project{
-        width: 280px;
+        max-width: 250px !important
     }
     .container-item:nth-child(2){
         margin: 40px 0px;
@@ -190,7 +190,7 @@
         transform: translate(0%, -0% ) translate3d(0,0,0) !important
     }
     h3{
-        font-size: 28px;
+        font-size: 24px;
     }
     .bio{
         display: block !important;
@@ -200,6 +200,7 @@
     }
     .bio-text{
         padding-top: 20px;
+        text-align: justify;
     }
     span{
         color: white;
@@ -207,6 +208,9 @@
         font-family: 'Barlow Condensed' , sans-serif;
         padding-top: 0px !important;
 
+    }
+    .list-item{
+        padding: 10px 24px !important;
     }
 }
 
